error.txt
In file included from /usr/include/glib-2.0/gobject/gobject.h:27:0,
                 from /usr/include/glib-2.0/gobject/gbinding.h:29,
                 from /usr/include/glib-2.0/glib-object.h:23,
                 from /usr/include/glib-2.0/gio/gioenums.h:28,
                 from /usr/include/glib-2.0/gio/giotypes.h:28,
                 from /usr/include/glib-2.0/gio/gio.h:26,
                 from /usr/include/gtk-3.0/gdk/gdkapplaunchcontext.h:28,
                 from /usr/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/include/gtk-3.0/gtk/gtk.h:30,
                 from speed.cpp:1:
speed.cpp: In constructor ‘SpeedGauge::SpeedGauge(GtkWidget*)’:
/usr/include/glib-2.0/gobject/gclosure.h:70:27: error: invalid conversion from ‘GCallback {aka void (*)()}’ to ‘GSourceFunc {aka int (*)(void*)}’ [-fpermissive]
 #define G_CALLBACK(f)    ((GCallback) (f))
                          ~^~~~~~~~~~~~~~~~
speed.cpp:14:29: note: in expansion of macro ‘G_CALLBACK’
         g_timeout_add(1000, G_CALLBACK(on_timeout), this);
                             ^~~~~~~~~~
In file included from /usr/include/glib-2.0/glib/giochannel.h:33:0,
                 from /usr/include/glib-2.0/glib.h:54,
                 from /usr/include/gtk-3.0/gdk/gdkconfig.h:13,
                 from /usr/include/gtk-3.0/gdk/gdk.h:30,
                 from /usr/include/gtk-3.0/gtk/gtk.h:30,
                 from speed.cpp:1:
/usr/include/glib-2.0/glib/gmain.h:605:10: note:   initializing argument 2 of ‘guint g_timeout_add(guint, GSourceFunc, gpointer)’
 guint    g_timeout_add              (guint           interval,

